# liar-fake-news-detection

./: README.md  pyproject.toml
notebooks/: 01_eda_bert_baseline.ipynb  01_liar_liar_pof_eda_baseline.ipynb  02_hybrid_model.ipynb  03_Hybrid_MC.ipynb  04_Hybrid_MC.ipynb  04_Hybrid_MC_tuning.ipynb  05_Compare_Models.ipynb  05_Hybrid_MC_tuning.ipynb  06_Final_Hybrid_MC_tuning.ipynb  99_Compare_Models.ipynb
