[tool.poetry]
name = "liar-fake-news-detection"
version = "0.1.0"
description = ""
authors = ["ayeshavm <ayesha.mendoza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.6.1"
transformers = "^4.51.3"
torch = "^2.7.0"
pandas = "^2.2.3"
nlpaug = "^1.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
